prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/uint.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/uint.rs:5:11
  |
5 | #[ensures(result != 42)]
  |           ^^^^^^^^^^^^
  |
note: the error originates here
 --> $DIR/uint.rs:6:1
  |
6 | / fn foo(x: u32) -> u32 {
7 | |     let y = x + 1;
8 | |     y * 2
9 | | }
  | |_^
note: counterexample for "x"
       value:   20
 --> $DIR/uint.rs:6:8
  |
6 | fn foo(x: u32) -> u32 {
  |        ^
note: counterexample for "y"
       value:   21
 --> $DIR/uint.rs:7:13
  |
7 |     let y = x + 1;
  |             ^^^^^
note: counterexample for "result"
       value:   42
 --> $DIR/uint.rs:8:5
  |
8 |     y * 2
  |     ^^^^^

error: aborting due to previous error

